Unreleased
----------
- Prepare on-premise 23.10

1.19.8
------
- Add download sha256 sample with zip password protected

1.19.7
------
- Fix system URL for EndpointAnalysis

1.19.6
------
- Add InvalidUrlError
- Add details to analysis server error

1.19.5
------
- Latest URL analysis fallback.

1.19.4
------
- Add global API custom instance setter.

1.19.3
------
- Add file name to hash analysis.

1.19.2
------
- Formatting fixes.

1.19.1
------
- Add "exact_match" option to UrlAnalysis.from_latest_analysis.

1.19
------
- Change "received_by" label to "reported_by" in submit phishing alert.

1.18.9
------
- Add additional info property to send phishing email.

1.18.8
------
- Fix is_available method.

1.18.7
______
- Support email file path for sending phishing email.

1.18.6
______
- Raise `FileTooLargeError` on analyzing file that is too large.

1.18.5
______
- Fix URL analysis report bug.

1.18.3
______
- Fix Apache license naming.

1.18.2
______
- Add 'send_phishing_email' method to 'Alert' object.

1.18.1
______
- Add binary alert functionality to `Alert` object.

1.17.5
______
- Add `Alert` object, which allows sending / querying for alerts.

1.17.4
______
- Add verdict property to `UrlAnalysis` and `EndpointAnalysis`
- Add endpoint scans filter by computer names

1.17.3
______
- Raise `UrlOfflineError` when analyzing a url that seems offline.
- Don't set `composed_only` of `from_latest_hash_analysis` if not explicitly set.
- Add optional day limit to `from_latest_hash_analysis`.

1.17.2
______
- Support check availability.

1.17.1
______
- support unset index by hash
- Add docstring to _api module

1.17
____
- Support get alerts by alert ids.

1.16.9
______
- Add endpoint scan start and end time for endpoint analysis

1.16.8
______
- Get latest URL analysis bugfix

1.16.7
______
- Support latest analysis for URL analysis
- Add support for proxies
- Remove deprecated edr assessment routes

1.16.6
______
- Fix family tag caching when no tags are returned
