@@ -1,3 +1,3 @@
-requests>=2.22.0,<3
-responses==0.16.0
-pytest==6.2.5
+requests>=2.29.0,<3
+responses==0.23.3
+pytest==7.4.4
