@@ -1,6 +1,7 @@
 Unreleased
 ----------
 - Prepare on-premise 23.10
+- Drop python 3.6 and python 3.7 support, add python 3.12 support
 
 1.19.8
 ------
